# sdm

./: CMakeLists.txt  COPYING  README.md  SDMBuildTreeSettings.cmake.in  SDMConfig.cmake.in  SDMConfigVersion.cmake.in
matlab/: CMakeLists.txt  SDM.m  sdm.cpp  sdm_mex.cpp
python/: CMakeLists.txt  setup.py.tpl  test_python.py
python/sdm/: __init__.py  sdm_ctypes.py  six.py  wrappers.py
sdm/: CMakeLists.txt  basics.hpp  cli.cpp  crossvalidate.cpp  crossvalidate.hpp  defaults.hpp  kernel_projection.cpp  kernel_projection.hpp  kernels.cpp  kernels.hpp  log.hpp  sdm.cpp  sdm.hpp  sdm_c.cpp  sdm_c.h  sdm_model.cpp  sdm_model.hpp  tune_params.cpp  tune_params.hpp  utils.hpp
sdm/kernels/: from_str.cpp  from_str.hpp  gaussian.cpp  gaussian.hpp  kernel.cpp  kernel.hpp  linear.cpp  linear.hpp  polynomial.cpp  polynomial.hpp
test/: CMakeLists.txt  test_c_interface.c  tests.cpp
